updated controllers and added repository pattern

--- a/skinet/Infrastructure/Infrastructure.csproj
+++ b/skinet/Infrastructure/Infrastructure.csproj
@@ -1,7 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <None Remove="Data\SeedData\products.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Data\SeedData\products.json" />
   </ItemGroup>
 
   <PropertyGroup>
